# templates

./: pyproject.toml
projeto_lp3_home/: app.py
projeto_lp3_home/static/assets/css/: style.css
projeto_lp3_home/templates/: base.html  como-utilizar.html  contato.html  politica.html  produtos.html  termos.html
