[tool.poetry]
name = "projeto-lp3-home"
version = "0.1.0"
description = ""
authors = ["Lucas Moura <l.conceicao@aluno.ifsp.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
